--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
+@import 'bootstrap/bootstrap';
 @import "{{ site.theme }}";
 
 .page-header {
@@ -9,11 +10,16 @@
   mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 70%, transparent 100%);
 }
 
-html {
+body {
   background-color: #101010;
 }
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   font-weight: bold;
   color: #fff;
+}
+
+.site-footer {
+  color: #fff;
+  border-top: solid 1px rgba(255, 255, 255, 0.5)
 }
