--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,18 +2,16 @@
 layout: default
 ---
 
-<div id = "index" class = "row mt-5">
-  <div class = "col">
-    <div class = "row justify-content-center ">
-      <h1>Hi, <br>
-        I'm Markus
-      </h1>
-    </div>
-    <div class = "row justify-content-center text-center mt-4">
-      <h2>
-        Software Engineer <br>
-        and Developer.
-      </h2>
-    </div>
+<div id = "index" class = "col my-auto text-center">
+  <div class = "row justify-content-center">
+    <h1>Hi, <br>
+      I'm Markus
+    </h1>
+  </div>
+  <div class = "row justify-content-center mt-4">
+    <h2>
+      Software Engineer <br>
+      and Developer.
+    </h2>
   </div>
 </div>
