--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,8 +46,14 @@
   mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 60%, transparent 100%);
 }
 
-body {
+html, body {
   background-color: #101010;
+  margin: 0;
+  height: 100%;
+}
+
+.main-content {
+  max-width: 100%;
 }
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
@@ -56,12 +62,21 @@ body {
   font-family: 'Montserrat';
 }
 
+.main-content p {
+  font-family: 'Montserrat';
+  color: #fff;
+}
+
 .site-footer {
   color: #fff;
   border-top: solid 1px rgba(255, 255, 255, 0.5);
   font-size: 1.15rem;
   background-color: #080808;
   font-family: 'Montserrat';
+}
+
+#index {
+  padding: 0;
 }
 
 #index h1 {
