main page margin fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       </div>
     </header>
 
-    <main id="content" class="row main-content h-75" role="main">
+    <main id="content" class="row main-content h-75 m-0" role="main">
       {{ content }}
 
       <!-- Not using footer for now
