--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,7 +10,7 @@ layout: default
   </div>
   <div class = "row justify-content-center mt-4">
     <h2>
-      Software Engineer <br>
+      Computer Engineer <br>
       and Developer.
     </h2>
   </div>
