--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,8 @@
 }
 
 .navbar {
-  overflow: hidden;
   font-size: 2rem;
+  overflow: hidden;
 }
 
 .navbar a {
@@ -39,10 +39,13 @@
   text-decoration: none;
 }
 
+#current {
+  color: #535353;
+}
+
 .page-header {
   background-image: url("{{ site.baseurl }}/assets/images/banner.jpg");
   background-color: #101010;
-  padding: 1rem 6rem;
   mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 60%, transparent 100%);
 }
 
