--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,3 +1,39 @@
 ---
 layout: default
 ---
+<div class = "col-4 my-auto contact-left">
+  <div class = "row">
+    <h1>Let's get in touch!</h1>
+  </div>
+  <div class = "row">
+    <h2>
+      I'm always looking for new opportunities. <br>
+      Feel free to contact me.
+    </h2>
+  </div>
+</div>
+<div class = "col offset-md-2"></div>
+<div class = "col-4 my-auto contact-right">
+  <div class = "row justify-content-end">
+    <h1>markuschue@gmail.com</h1>
+  </div>
+  <div class = "row justify-content-end">
+    <h2>+34 648 40 21 74</h2>
+  </div>
+  <div class = "row justify-content-end mt-5">
+    <div class = "col-2">
+      <h4>
+        <a href="https://www.linkedin.com/in/markuschu/">
+          <img src="{{ '/assets/images/linkedin-logo.png' | relative_url }}" alt="email" style="height: 4rem;">
+        </a>
+      </h4>
+    </div>
+    <div class = "col-2">
+      <h4>
+        <a href="https://github.com/markkusch">
+          <img src="{{ '/assets/images/github-logo.png' | relative_url }}" alt="email" style="height: 4rem;">
+        </a>
+      </h4>
+    </div>
+  </div>
+</div>
