--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class = "col-4 my-auto contact-left">
+<div class = "col my-auto contact-left mx-5">
   <div class = "row">
     <h1>Let's get in touch!</h1>
   </div>
@@ -12,8 +12,7 @@ layout: default
     </h2>
   </div>
 </div>
-<div class = "col offset-md-2"></div>
-<div class = "col-4 my-auto contact-right">
+<div class = "col my-auto contact-right mx-5">
   <div class = "row justify-content-end">
     <h1>markuschue@gmail.com</h1>
   </div>
@@ -24,14 +23,14 @@ layout: default
     <div class = "col-2">
       <h4>
         <a href="https://www.linkedin.com/in/markuschu/">
-          <img src="{{ '/assets/images/linkedin-logo.png' | relative_url }}" alt="email" style="height: 4rem;">
+          <img class = "cover" src="{{ '/assets/images/linkedin-logo.png' | relative_url }}" alt="email">
         </a>
       </h4>
     </div>
     <div class = "col-2">
       <h4>
         <a href="https://github.com/markkusch">
-          <img src="{{ '/assets/images/github-logo.png' | relative_url }}" alt="email" style="height: 4rem;">
+          <img class = "cover" src="{{ '/assets/images/github-logo.png' | relative_url }}" alt="email">
         </a>
       </h4>
     </div>
