--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,21 +7,20 @@
 @keyframes appearText {
   0% {
     opacity: 0;
-    transform: translateY(0rem);
+    transform: translateY(0vw);
   }
   100% {
     opacity: 1;
-    transform: translateY(0.75rem);
+    transform: translateY(0.75vw);
   }
 }
 
 .navbar {
-  font-size: 2rem;
   overflow: hidden;
 }
 
-.navbar a {
-  color: white;
+.navbar h3 {
+  font-size: max(1.25vw, 1.5em);
   font-family: 'Montserrat';
   transition: 0.2s all ease-in-out;
   font-style: italic;
@@ -31,6 +30,14 @@
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
+}
+
+.navbar a {
+  color: white;
+}
+
+.navbar img {
+  height: max(3vw, 3.5em);
 }
 
 .navbar a:hover {
@@ -56,6 +63,10 @@ html, body {
   height: 100%;
 }
 
+img {
+  object-fit: scale-down;
+}
+
 .main-content {
   max-width: 100%;
 }
@@ -74,7 +85,7 @@ html, body {
 .site-footer {
   color: #fff;
   border-top: solid 1px rgba(255, 255, 255, 0.5);
-  font-size: 1.15rem;
+  font-size: 1.15em;
   background-color: #080808;
   font-family: 'Montserrat';
 }
@@ -84,7 +95,7 @@ html, body {
 }
 
 #index h1 {
-  font-size: 4rem;
+  font-size: max(4vw, 3.5em);
   justify-content: center;
   animation-name: appearText;
   opacity: 0;
@@ -94,7 +105,7 @@ html, body {
 }
 
 #index h2 {
-  font-size: 2rem;
+  font-size: max(2vw, 1.5em);
   font-weight: 400;
   opacity: 0;
   animation-name: appearText;
@@ -104,16 +115,26 @@ html, body {
 }
 
 .contact-left h1 {
-  font-size: 400%;
+  font-size: max(4vw, 3.5em);
 }
 
 .contact-left h2 {
-  font-size: 200%;
+  font-size: max(2vw, 1.5em);
   font-weight: 500;
 }
 
-.contact-right h1, .contact-right h2 {
+.contact-right h1 {
   font-weight: 400;
+  font-size: max(2vw, 1.5em);
+} 
+
+.contact-right h2 {
+  font-weight: 400;
+  font-size: max(1.5vw, 1.25em);
+}
+
+.contact-right img {
+  height: max(3vw, 3em);
 }
 
 .contact-left {
@@ -122,6 +143,7 @@ html, body {
   animation-delay: 0.5s;
   animation-fill-mode: forwards;
   animation-duration: 1s;
+  padding-top: 5vh;
 }
 
 .contact-right {
@@ -130,4 +152,5 @@ html, body {
   animation-delay: 1s;
   animation-fill-mode: forwards;
   animation-duration: 1s;
+  padding-top: 10vh;
 }
