made navbar expandable, better responsiveness

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,12 +15,8 @@
   }
 }
 
-.navbar {
-  overflow: hidden;
-}
-
 .navbar h3 {
-  font-size: max(1.25vw, 1.5em);
+  font-size: max(1.25vw, 1.25em);
   font-family: 'Montserrat';
   transition: 0.2s all ease-in-out;
   font-style: italic;
@@ -37,13 +33,24 @@
 }
 
 .navbar img {
-  height: max(3vw, 3.5em);
+  height: max(3.5vw, 2.5em);
 }
 
 .navbar a:hover {
-  transform: scale(1.5); 
   color: #535353;
   text-decoration: none;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler:focus {
+  outline: none;
 }
 
 #current {
@@ -134,7 +141,7 @@ img {
 }
 
 .contact-right img {
-  height: max(3vw, 3em);
+  width: max(5vw, 5em);
 }
 
 .contact-left {
