--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,24 +16,27 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header py-1" role="banner">
-      <div class = "navbar row justify-content-md-center">
-        <div class = "col">
-          <a href="{{ '/' | relative_url }}">
-            <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="icon">
-          </a>
+      <nav class = "navbar navbar-expand-lg justify-content-md-center navbar-dark">
+        <a class = "navbar-brand" href="{{ '/' | relative_url }}">
+          <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="icon">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class = "collapse navbar-collapse mt-2" id = "navbarNav">
+          <ul class = "navbar-nav flex-row ml-md-auto d-md-flex justify-content-center">
+            {% for item in site.data.navbar.nav %}
+            <li class = "nav-item p-3">
+              {% if page.url contains item.url %}
+                <h3><a id = "current" href="{{ item.url }}">{{ item.title }}</a></h3>
+              {% else %}
+                <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
+              {% endif %}
+            </li>
+            {% endfor %}
+          </ul>
         </div>
-        <div class = "row mt-2">
-          {% for item in site.data.navbar.nav %}
-          <div class = "col-md-auto mx-5">
-            {% if page.url contains item.url %}
-              <h3><a id = "current" href="{{ item.url }}">{{ item.title }}</a></h3>
-            {% else %}
-              <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
-            {% endif %}
-          </div>
-          {% endfor %}
-        </div>
-      </div>
+      </nav>
     </header>
 
     <main id="content" class="row main-content h-75 justify-content-center m-0" role="main">
