about me page done

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class = "col my-auto contact-left mx-5">
+<div class = "col my-auto contact-left mx-5 anim-first">
   <div class = "row">
     <h1>Let's get in touch!</h1>
   </div>
@@ -12,7 +12,7 @@ layout: default
     </h2>
   </div>
 </div>
-<div class = "col my-auto contact-right mx-5">
+<div class = "col my-auto contact-right mx-5 anim-second">
   <div class = "row justify-content-end">
     <h1>markuschue@gmail.com</h1>
   </div>
@@ -27,7 +27,7 @@ layout: default
         </a>
       </h4>
     </div>
-    <div class = "col-2">
+    <div class = "col-2 ml-2">
       <h4>
         <a href="https://github.com/markkusch">
           <img class = "cover" src="{{ '/assets/images/github-logo.png' | relative_url }}" alt="email">
