--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <div id = "index" class = "col my-auto text-center">
-  <div class = "row justify-content-center">
+  <div class = "row justify-content-center anim-first">
     <h1>Hi, <br>
       I'm Markus
     </h1>
   </div>
-  <div class = "row justify-content-center mt-4">
+  <div class = "row justify-content-center mt-4 anim-second">
     <h2>
       Computer Engineer <br>
       and Developer.
