--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,14 +4,17 @@ layout: default
 
 <div id = "index" class = "col my-auto text-center">
   <div class = "row justify-content-center anim-first">
-    <h1>Hi, <br>
+    <h1>Hi,<br>
       I'm Markus
     </h1>
   </div>
   <div class = "row justify-content-center mt-4 anim-second">
     <h2>
-      Computer Engineer <br>
+      Computer Engineer<br>
       and Developer.
     </h2>
+  </div>
+  <div class = "row justify-content-center mt-4 anim-third">
+    <img src = "../assets/images/single-star.png">
   </div>
 </div>
