--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,6 +62,8 @@
   //background-image: none;
   background-color: #202020;
   mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 60%, transparent 100%);
+  position: relative;
+  z-index: 1;
 }
 
 html, body {
@@ -76,6 +78,8 @@ img {
 
 .main-content {
   max-width: 100%;
+  position: relative;
+  z-index: 0;
 }
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
@@ -109,6 +113,10 @@ img {
 #index h2 {
   font-size: max(2vw, 1.5em);
   font-weight: 400;
+}
+
+#index img {
+  width: max(3vw, 2.5em);
 }
 
 .contact-left h1 {
@@ -177,4 +185,11 @@ ul {
   animation-delay: 1.5s;
   animation-fill-mode: forwards;
   animation-duration: 1s;
+}
+
+canvas {
+  position: fixed;
+  left:0;
+  top:0;
+  z-index: -1;
 }
