canvas resizing added

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,21 +4,21 @@ layout: default
 
 <div class = "about w-75">
   <div class = "row mt-5 anim-first">
-    <div class = "col">
+    <div class = "col-8">
       <h1>WHO AM I?<img class = "heading-star" src = "../assets/images/single-star.png"> </h1>
       <p>
         Hi, I am Markus Schüller Perdigón, a Computer Engineer graduated from the University of La Laguna in 2022 and currently living in Tenerife, Spain.
       </p>
     </div>
-    <div class = "col"></div>
+    <div class = "col-4"></div>
   </div>
   <div class = "row mt-5 anim-second">
-    <div class = "col"></div>
-    <div class = "col">
+    <div class = "col-4"></div>
+    <div class = "col-8 text-right">
       <h3><img class = "heading-star" src = "../assets/images/single-star.png">MY PASSIONS</h3>
       <p>
         I am very passionate about technology, especially about programming and software development. I am also very interested in astronomy and everything space related (hence the design of this website). <br>
-        In my free time I also enjoy playing videogames, reading books and photography, among other things. <br>
+        In my free time I also enjoy playing videogames, reading books and photography, among other things. 
         And above everything, I love seeking new challenges to learn and expand my knowledge and skills!
       </p>
     </div>
