About page done

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,17 @@
   }
 }
 
+@keyframes disappearText {
+  0% {
+    opacity: 1;
+    transform: translateY(0.75vw);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(0vw);
+  }
+}
+
 .nav-link {
   color: white;
   font-size: max(1.25vw, 1.25em);
@@ -115,11 +126,11 @@ img {
   width: max(3vw, 2.5em);
 }
 
-.contact-left h1 {
+.content-left h1 {
   font-size: max(4vw, 3.5em);
 }
 
-.contact-left h2 {
+.content-left h2 {
   font-size: max(2vw, 1.5em);
   font-weight: 500;
 }
@@ -174,6 +185,20 @@ ul {
   animation-duration: 1s;
 }
 
+.anim-fast {
+  animation-name: appearText;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+.anim-out {
+  animation-name: disappearText;
+  opacity: 1;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
 canvas {
   position: fixed;
   left:0;
@@ -183,4 +208,20 @@ canvas {
 
 .row {
   margin: 0;
+}
+
+.vertical-line{
+  width: 1px;
+  background-color: white;
+  height: 100%;
+  margin: 0;
+  min-width: 1px;
+  min-height: 100px;
+}
+
+.line-star {
+  width: max(2vw, 3em);
+  padding-bottom: 0.2em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
 }
