--- a/src/styles.css
+++ b/src/styles.css
@@ -137,7 +137,7 @@ img {
 
 .contact-right h1 {
   font-weight: 400;
-  font-size: max(2vw, 1.5em);
+  font-size: max(1.75vw, 1.25em);
 } 
 
 .contact-right h2 {
@@ -219,9 +219,28 @@ canvas {
   min-height: 100px;
 }
 
+.horizontal-line {
+  height: 2px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  margin: 0;
+  min-width: 100px;
+  min-height: 1px;
+  border: none;
+}
+
 .line-star {
-  width: max(2vw, 3em);
-  padding-bottom: 0.2em;
-  margin-right: 0.2em;
-  margin-left: 0.2em;
+  width: max(1vw, 2em);
+}
+
+.about-right {
+  min-height: 40vh;
+}
+
+.arrow-img {
+  height: max(1.5vw, 1em);
+}
+
+.arrow-img:hover {
+  cursor: pointer;
 }
