--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,12 @@ html, body {
   height: 100%;
 }
 
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 body, body * {
   font-family: 'Montserrat', sans-serif;
   color: #fff;
@@ -78,13 +84,6 @@ body, body * {
 
 img {
   object-fit: scale-down;
-}
-
-.vertical-center {
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
 
 .main-content {
@@ -100,11 +99,10 @@ img {
   font-size: 1.4em;
 }
 
-.site-footer {
+.footer {
   color: #fff;
-  border-top: solid 1px rgba(255, 255, 255, 0.5);
   font-size: 1.15em;
-  background-color: #080808;
+  padding: 2em;
 }
 
 #index {
@@ -220,7 +218,7 @@ canvas {
 
 .horizontal-line {
   height: 2px;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   width: 100%;
   margin: 0;
   min-width: 100px;
